// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CloseButton /> default matches with snapshot 1`] = `
.c0 {
  --Button-border-radius: var(--border-radius-s);
  position: relative;
  box-sizing: border-box;
  min-height: var(--Button-dimension);
  padding: var(--Button-padding);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.625rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  color: var(--color-grey-900,#222);
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  border-radius: var(--Button-border-radius,0);
  min-width: 0;
  border: var(--border-width) solid var(--color-grey-400);
  background-color: var(--color-grey-000,#fff);
  color: var(--color-grey-900,#222);
  -webkit-transition: background-color var(--transition),color var(--transition),border-color var(--transition);
  transition: background-color var(--transition),color var(--transition),border-color var(--transition);
}

.c0.k-Button--rounded {
  --Button-border-radius: var(--border-radius-rounded);
}

.c0 svg {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c0:disabled,
.c0.k-Button--disabled {
  cursor: not-allowed;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus-visible {
  outline: auto;
}

.c0.k-Button--nano {
  --Button-dimension: 1.25rem;
  --Button-min-width: 6.25rem;
  --Button-padding: 0 0.375rem;
  font-size: 0.75rem;
}

.c0.k-Button--micro {
  --Button-dimension: 1.875rem;
  --Button-min-width: 8.125rem;
  --Button-padding: 0.3125rem 0.625rem;
  font-size: 0.75rem;
}

.c0.k-Button--tiny,
.c0.k-Button--small {
  --Button-dimension: 2.5rem;
  --Button-min-width: 10rem;
  --Button-padding: 0.4375rem 1.25rem;
}

.c0.k-Button--regular,
.c0.k-Button--medium {
  --Button-dimension: 3.125rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 1.875rem;
}

.c0.k-Button--big,
.c0.k-Button--large {
  --Button-dimension: 3.125rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 1.875rem;
}

.c0.k-Button--huge {
  --Button-dimension: 4.375rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c0.k-Button--giant {
  --Button-dimension: 4.375rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c0.k-Button--fit-min-width {
  min-width: var(--Button-min-width);
}

.c0.k-Button--fit-icon {
  padding: 0;
  overflow: hidden;
  width: var(--Button-dimension);
  height: var(--Button-dimension);
}

.c0.k-Button--fit-fluid {
  width: 100%;
}

.c0 svg:not(.k-ColorSvg),
.c0 svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill var(--transition);
  transition: fill var(--transition);
}

.c0:hover {
  border-color: var(--color-primary-500);
  background-color: var(--color-grey-000,#fff);
  color: var(--color-grey-900,#222);
}

.c0:focus {
  border-color: var(--color-primary-500);
  background-color: var(--color-grey-000,#fff);
  color: var(--color-grey-900,#222);
}

.c0:active {
  border-color: var(--color-primary-700);
  background-color: var(--color-grey-000,#fff);
  color: var(--color-grey-900,#222);
}

.c0:disabled,
.c0.k-Button--disabled {
  border: var(--border-width) solid var(--color-grey-400);
  background-color: var(--color-grey-000);
  color: var(--color-grey-600);
}

.c0.k-Button--hasBullet {
  --Button-bullet-radius: 0.4375rem;
  --Math-Cos45: 0.7071;
  --Button-radius: var(--Button-border-radius,0);
  --Button-bullet-distance: calc( var(--Button-radius) - (var(--Button-radius) * var(--Math-Cos45)) - var(--Button-bullet-radius) );
}

.c0.k-Button--hasBullet::after {
  content: '';
  position: absolute;
  background-color: var(--Button-bullet-color,var(--color-primary-500));
  width: 0.5rem;
  height: 0.5rem;
  border-radius: 0.5rem;
  border: 0.1875rem solid var(--color-grey-000);
  right: var(--Button-bullet-distance);
  top: var(--Button-bullet-distance);
}

.c0.k-Button--hasBullet.k-Button--fit-icon {
  overflow: initial;
}

.c0.k-Button--hasBullet.k-Button--rounded {
  --Button-radius: calc(var(--Button-dimension) / 2);
}

@media (min-width:40rem) {
  .c0.k-Button--big,
  .c0.k-Button--large {
    --Button-min-width: 13.75rem;
    --Button-dimension: 4.375rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--huge {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--giant {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5.625rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (max-width:39.9375rem) {
  .c0[class*='k-Button--mobile-fit'] {
    min-width: initial !important;
    padding: var(--Button-padding);
    width: initial;
    height: initial;
    width: initial;
  }

  .c0[class*='k-Button--mobile-fit'].k-Button--mobile-fit-min-width {
    min-width: var(--Button-min-width) !important;
  }

  .c0[class*='k-Button--mobile-fit'].k-Button--mobile-fit-icon {
    padding: 0;
    overflow: hidden;
    width: var(--Button-dimension);
    height: var(--Button-dimension);
  }

  .c0[class*='k-Button--mobile-fit'].k-Button--mobile-fit-fluid {
    width: 100%;
  }
}

<button
  aria-label="Close"
  className="c0 k-Button k-Button--medium k-Button--hydrogen k-Button--fit-icon"
  style={
    Object {
      "--Button-border-radius": 0,
      "--Button-bullet-color": null,
    }
  }
  title="Close"
  type="button"
>
  <svg
    fill="var(--color-grey-900, #222)"
    height="8"
    viewBox="0 0 8 8"
    width="8"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M.464 6.12L6.12.465 7.537 1.88 1.88 7.535z"
    />
    <path
      d="M1.88.464L7.535 6.12 6.12 7.537.465 1.88z"
    />
  </svg>
</button>
`;

exports[`<CloseButton /> with props matches with snapshot 1`] = `
.c0 {
  --Button-border-radius: var(--border-radius-s);
  position: relative;
  box-sizing: border-box;
  min-height: var(--Button-dimension);
  padding: var(--Button-padding);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.625rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  color: var(--color-grey-900,#222);
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  border-radius: var(--Button-border-radius,0);
  min-width: 0;
  border: var(--border-width) solid var(--color-grey-400);
  background-color: var(--color-grey-000,#fff);
  color: var(--color-grey-900,#222);
  -webkit-transition: background-color var(--transition),color var(--transition),border-color var(--transition);
  transition: background-color var(--transition),color var(--transition),border-color var(--transition);
}

.c0.k-Button--rounded {
  --Button-border-radius: var(--border-radius-rounded);
}

.c0 svg {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c0:disabled,
.c0.k-Button--disabled {
  cursor: not-allowed;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus-visible {
  outline: auto;
}

.c0.k-Button--nano {
  --Button-dimension: 1.25rem;
  --Button-min-width: 6.25rem;
  --Button-padding: 0 0.375rem;
  font-size: 0.75rem;
}

.c0.k-Button--micro {
  --Button-dimension: 1.875rem;
  --Button-min-width: 8.125rem;
  --Button-padding: 0.3125rem 0.625rem;
  font-size: 0.75rem;
}

.c0.k-Button--tiny,
.c0.k-Button--small {
  --Button-dimension: 2.5rem;
  --Button-min-width: 10rem;
  --Button-padding: 0.4375rem 1.25rem;
}

.c0.k-Button--regular,
.c0.k-Button--medium {
  --Button-dimension: 3.125rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 1.875rem;
}

.c0.k-Button--big,
.c0.k-Button--large {
  --Button-dimension: 3.125rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 1.875rem;
}

.c0.k-Button--huge {
  --Button-dimension: 4.375rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c0.k-Button--giant {
  --Button-dimension: 4.375rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c0.k-Button--fit-min-width {
  min-width: var(--Button-min-width);
}

.c0.k-Button--fit-icon {
  padding: 0;
  overflow: hidden;
  width: var(--Button-dimension);
  height: var(--Button-dimension);
}

.c0.k-Button--fit-fluid {
  width: 100%;
}

.c0 svg:not(.k-ColorSvg),
.c0 svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill var(--transition);
  transition: fill var(--transition);
}

.c0:hover {
  border-color: var(--color-primary-500);
  background-color: var(--color-grey-000,#fff);
  color: var(--color-grey-900,#222);
}

.c0:focus {
  border-color: var(--color-primary-500);
  background-color: var(--color-grey-000,#fff);
  color: var(--color-grey-900,#222);
}

.c0:active {
  border-color: var(--color-primary-700);
  background-color: var(--color-grey-000,#fff);
  color: var(--color-grey-900,#222);
}

.c0:disabled,
.c0.k-Button--disabled {
  border: var(--border-width) solid var(--color-grey-400);
  background-color: var(--color-grey-000);
  color: var(--color-grey-600);
}

.c0.k-Button--hasBullet {
  --Button-bullet-radius: 0.4375rem;
  --Math-Cos45: 0.7071;
  --Button-radius: var(--Button-border-radius,0);
  --Button-bullet-distance: calc( var(--Button-radius) - (var(--Button-radius) * var(--Math-Cos45)) - var(--Button-bullet-radius) );
}

.c0.k-Button--hasBullet::after {
  content: '';
  position: absolute;
  background-color: var(--Button-bullet-color,var(--color-primary-500));
  width: 0.5rem;
  height: 0.5rem;
  border-radius: 0.5rem;
  border: 0.1875rem solid var(--color-grey-000);
  right: var(--Button-bullet-distance);
  top: var(--Button-bullet-distance);
}

.c0.k-Button--hasBullet.k-Button--fit-icon {
  overflow: initial;
}

.c0.k-Button--hasBullet.k-Button--rounded {
  --Button-radius: calc(var(--Button-dimension) / 2);
}

@media (min-width:40rem) {
  .c0.k-Button--big,
  .c0.k-Button--large {
    --Button-min-width: 13.75rem;
    --Button-dimension: 4.375rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--huge {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c0.k-Button--giant {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5.625rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (max-width:39.9375rem) {
  .c0[class*='k-Button--mobile-fit'] {
    min-width: initial !important;
    padding: var(--Button-padding);
    width: initial;
    height: initial;
    width: initial;
  }

  .c0[class*='k-Button--mobile-fit'].k-Button--mobile-fit-min-width {
    min-width: var(--Button-min-width) !important;
  }

  .c0[class*='k-Button--mobile-fit'].k-Button--mobile-fit-icon {
    padding: 0;
    overflow: hidden;
    width: var(--Button-dimension);
    height: var(--Button-dimension);
  }

  .c0[class*='k-Button--mobile-fit'].k-Button--mobile-fit-fluid {
    width: 100%;
  }
}

<button
  aria-label="close"
  className="c0 k-Button k-Button--small k-Button--hydrogen k-Button--fit-icon"
  style={
    Object {
      "--Button-border-radius": 0,
      "--Button-bullet-color": null,
    }
  }
  title="Close"
  type="button"
>
  <svg
    fill="var(--color-grey-900, #222)"
    height="8"
    viewBox="0 0 8 8"
    width="8"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M.464 6.12L6.12.465 7.537 1.88 1.88 7.535z"
    />
    <path
      d="M1.88.464L7.535 6.12 6.12 7.537.465 1.88z"
    />
  </svg>
</button>
`;
